# Klipper

./: .env.example  .gitignore  CLAUDE-arch.md  CLAUDE-log.md  CLAUDE-mockup-bridge.md  CLAUDE-process.md  CLAUDE-pwa.md  CLAUDE-session-template.md  CLAUDE-sprint7-session.md  CLAUDE.md  DIAGNOSTICO-paginas.md  PATCH-6_Contas_dialogs.py  PATCH-mobile-kpi-grid.css  README.md  app.py  dump_repo.py  klipper_context.txt  pyproject.toml  railway.toml  requirements.txt
api/: auth.py  main.py  requirements.txt
bot/: bot.py  handlers.py  parser.py
core/: analytics.py  anti_bs.py  auth.py  behavioral.py  budget_engine.py  categorizer.py  circuit_breaker.py  consilium.py  credit_card_billing.py  database.py  debt.py  financial_ai.py  formatters.py  fragility.py  health_repository.py  installment_engine.py  ledger_filters.py  liquidity.py  m1_quant.py  m2_governance.py  m3_context.py  market_cache.py  market_data.py  modals.py  quick_add.py  repositories.py  split_utils.py  statement_reader.py  styles.py  weekly_report.py
design_handoff_klipper/: Klipper.html  README.md  klipper-mockup-v2.jsx
migrations/: 001_initial_schema.sql  002_v2_schema.sql  003_health_schema.sql  004_numeric_types.sql  005a_add_user_id_columns.sql  005b_rls_user_policies.sql  006_category_memory.sql  007_domain_model.sql  008_user_scoped_unique.sql  009_drop_health_domain.sql  010_categorization_rules.sql
models/: __init__.py  bank_account.py  budget.py  credit_card.py  decision.py  health.py  installment.py  investment.py  transaction.py  transaction_split.py
pages/: 10_Saude.py  11_Extratos.py  (+13 more)
(+2864 files in other folders)
