[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klipper"
version = "0.1.0"
description = "Klipper — Personal Financial Management"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "supabase>=2.10.0",
    "pydantic>=2.0.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.55.0",
    "instructor>=1.7.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
]
bot = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: testes com I/O real (Redis, APIs, sleep) — excluídos do ciclo local",
]

[tool.coverage.run]
omit = ["tests/*", "bot/*", "pages/*", "migrations/*"]

[tool.coverage.report]
fail_under = 80
